--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
 		"@iconify-json/lucide": "^1.2.66",
 		"@iconify-json/ri": "^1.2.5",
 		"@iconify/tailwind4": "^1.0.6",
+		"@stripe/stripe-js": "^7.9.0",
 		"daisyui": "^5.1.6",
+		"stripe": "^18.5.0",
 		"swiper": "^11.2.10",
 		"tailwindcss-motion": "^1.1.1"
 	}
